src/objects/Badge__c.object
<CustomObject>
    <description>Badges that are obtained by completed specified Challenge(s)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Status of Badge.</description>
        <inlineHelpText>Status of Badge.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multi_Award__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Badge can be awarded more than once.</description>
        <inlineHelpText>Badge can be awarded more than once.</inlineHelpText>
        <label>Can Earn Multiple Times</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Value__c</fullName>
        <description>Core Value associated to the Badge</description>
        <inlineHelpText>Core Value associated to the Badge</inlineHelpText>
        <label>Core Value</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fun</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Badge</description>
        <inlineHelpText>Description of the Badge</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date the Badge ends</description>
        <inlineHelpText>Date the Badge ends</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Focus__c</fullName>
        <description>Focus associated to the Badge</description>
        <inlineHelpText>Focus associated to the Badge</inlineHelpText>
        <label>Focus</label>
        <picklist>
            <picklistValues>
                <fullName>[topcoder]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anniversaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornerstone OnDemand Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoutouts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver Lining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workday Certification</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>URL for image associated to Badge</description>
        <inlineHelpText>URL for image associated to Badge</inlineHelpText>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE( Image_URL__c , &quot;Badge Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date that the Badge becomes active.</description>
        <inlineHelpText>The date that the Badge becomes active.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title for the Badge</description>
        <inlineHelpText>Title for the Badge</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Badge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Core_Value__c</columns>
        <columns>Focus__c</columns>
        <columns>Active__c</columns>
        <columns>Multi_Award__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IP0000000D93MMAS_00NP0000000cERSMA2</fullName>
        <active>true</active>
        <errorMessage>Badge must be active.</errorMessage>
        <field>Awarded_Badge__c.Badge__c</field>
        <filterItems>
            <field>Badge__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Awarded Badge_Badge</name>
    </namedFilters>
    <pluralLabel>Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>